--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/gabarito": "^5.0.1",
     "@fontsource/gabarito": "^5.0.1",
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.5.1",
