--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/gabarito": "^5.0.1",
     "@fontsource-variable/gabarito": "^5.0.1",
+    "@fontsource/gabarito": "^5.0.1",
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^11.0.1"
+    "react-icons": "^4.11.0",
+    "swiper": "^11.0.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
