--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "@fontsource-variable/gabarito": "^5.0.1",
     "@fontsource/gabarito": "^5.0.1",
     "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-hooks": "^1.0.1",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "redux": "^4.2.1",
     "swiper": "^11.0.2",
     "zod": "^3.22.4"
   },
