--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-credit-cards-2": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hooks": "^1.0.1",
