--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/gabarito": "^5.0.1",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
