--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/gabarito": "^5.0.1",
     "@hookform/resolvers": "^3.3.2",
+    "@mercadopago/sdk-react": "^0.0.15",
     "@reduxjs/toolkit": "^1.9.7",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.5.1",
