--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.5.1",
     "chart.js": "^4.4.0",
     "framer-motion": "^10.16.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.41",
+    "@types/dom-to-image": "^2.6.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
